add permiso as dependency

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
     {lager, "2.0.3", {git, "https://github.com/basho/lager", {tag, "2.0.3"}}},
     {sblob , ".*", {git, "git://github.com/marianoguerra/sblob", {branch, "remove-features"}}},
     {smc, ".*", {git, "git://github.com/marianoguerra/smc", {branch, "master"}}},
-    {shard, ".*", {git, "git://github.com/marianoguerra/shard", {branch, "master"}}}
+    {shard, ".*", {git, "git://github.com/marianoguerra/shard", {branch, "master"}}},
+    {permiso, ".*", {git, "git://github.com/marianoguerra/permiso", {branch, "master"}}}
 ]}.
 
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
