initial implementation of triq tests for iorioc module

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
     {sblob , ".*", {git, "git://github.com/marianoguerra/sblob", {branch, "remove-features"}}},
     {smc, ".*", {git, "git://github.com/marianoguerra/smc", {branch, "master"}}},
     {shard, ".*", {git, "git://github.com/marianoguerra/shard", {branch, "master"}}},
-    {permiso, ".*", {git, "git://github.com/marianoguerra/permiso", {branch, "master"}}}
+    {permiso, ".*", {git, "git://github.com/marianoguerra/permiso", {branch, "master"}}},
+    {triq, ".*", {git, "https://github.com/krestenkrab/triq",  {branch, "master"}}}
 ]}.
 
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
